# materials

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  claude_desktop_config.example.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
src/mcp_materials/: __init__.py  server.py
tests/: conftest.py  test_server.py
